Fix recorder and player dimensions on mobile

--- a/src/Modules/VideoRecorder/VideoRecorder.css
+++ b/src/Modules/VideoRecorder/VideoRecorder.css
@@ -19,3 +19,7 @@
     border-color: white !important;
     border-width: 5px !important;
 }
+
+.cld-video-recorder{
+    max-height: 50vh;
+}
